# botscrapper

./: .replit  advanced_validator.py  app.py  data_processor.py  data_validator.py  hyper_scraper.py  pyproject.toml  replit.md  robust_scraper.py  scraper.py  simple_scraper.py  turbo_scraper.py  turmeric_buyers_fast.db  turmeric_buyers_robust.db  turmeric_buyers_robust_20250728_061012.csv  turmeric_importers_fast.csv  ultra_fast_scraper.py  ultra_fast_scraper_fixed.py  utils.py
attached_assets/: Pasted-Kamu-adalah-AI-Developer-dengan-spesialisasi-Web-Scraping-Global-Super-Cepat-Tugasmu-adalah-men-1753634026768_1753634026768.txt  Pasted-Kamu-adalah-AI-Developer-tingkat-dewa-dengan-keahlian-Web-Scraping-Skala-Besar-Validasi-Data-dan-A-1753632689319_1753632689320.txt
