[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.14",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "cloudscraper>=1.2.71",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "fake-useragent>=2.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "phonenumbers>=9.0.10",
    "pyquery>=2.0.1",
    "requests-html>=0.10.0",
    "requests>=2.32.4",
    "selenium>=4.34.2",
    "streamlit>=1.47.1",
    "trafilatura>=2.0.0",
    "undetected-chromedriver>=3.5.5",
    "urllib3>=2.5.0",
    "validators>=0.35.0",
    "retrying>=1.4.1",
]
